tests/negative/neg_imported_object_assignment.safe
-- Test: neg_imported_object_assignment
-- Description: Imported package-qualified objects remain read-only in PR08.3.
-- Expected: REJECT unsupported_source_construct

with Provider_Object;

package Imported_Object_Assignment_Test

   task Writer

      loop
         Provider_Object.Seed = 4;




